fixed tooltip not showing

--- a/styles/style.css
+++ b/styles/style.css
@@ -338,7 +338,7 @@ audio {
 .volume-slider {
   -webkit-appearance: none;
   appearance: none;
-  width: 25%;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
   background: linear-gradient(to right, #5c5b5b 100%, #2c2c2c 0%);
@@ -366,10 +366,15 @@ audio {
   border: none;
 }
 
-.volume-slider::after {
+.volume-slider-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.volume-slider-wrapper::after {
   content: attr(data-tooltip);
   position: absolute;
-  top: -1.8rem;
+  top: -1rem;
   left: 50%;
   transform: translateX(-50%);
   font-size: 0.7rem;
@@ -383,7 +388,7 @@ audio {
   white-space: nowrap;
 }
 
-.volume-slider:hover::after {
+.volume-slider-wrapper:hover::after {
   opacity: 1;
 }
 
@@ -392,6 +397,7 @@ audio {
   align-items: center;
   gap: 10px;
   margin-top: 8px;
+  justify-content: end;
 }
 
 .track-header {
@@ -406,7 +412,7 @@ audio {
   border: none;
   color: var(--accent-color);
   font-size: 1.2rem;
-  margin-top: 2px;
+  margin-top: 6px;
   cursor: pointer;
 }
 
